2013-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (GammaImage): Eliminate a compiler warning.

	* coders/png.c (ReadOnePNGImage): Eliminate a compiler warning.

	* coders/pcl.c (WritePCLImage): Eliminate a compiler warning.

2013-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (InvokePostscriptDelegate): Log return status.

	* magick/nt_base.c (NTGhostscriptFonts): For Microsoft Windows,
	also search c:\gs\fonts for Ghostscript font files.

	* coders/ept.c (ReadEPTImage): Fix crash observed when Ghostscript
	fails to produce output.

2013-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c: Simplify FreeType2 header inclusion.

	* configure.ac: Only test for freetype/freetype.h if ft2build.h
	was not found.

2013-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ttf: Update FreeType to release 2.5.2.

	* Updated build to use Automake 1.14.1.

2013-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libxml: Update libxml2 to release 2.9.1.

2013-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lcms/include/lcms2.h: Update lcms to release 2.5.

	* png/README: Update PNG library to release 1.6.8.

	* jpeg: Update Windows IJG JPEG library to release 9.

2013-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/alpha_composite.h (BlendCompositePixel): Fix from Troy
	Patteson to eliminate induced color problems when compositing two
	images which include fully transparent pixels.  Now fully
	transparent pixels do not contribute any color to the composed
	result. Opacity used when blending is now based on the average
	opacity of both pixels.  Resolves SourceForge issue #148 "Pixel
	interpolation problem with rotated transparent images ".

2013-12-18  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Properly scale 16-bit input
	PNG down to 8-bit when using a Q8 build.
